fix(css): set more readable color for table headers (#3208)

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,6 +1,6 @@
 .table thead th {
   font-size: 1rem !important;
-  color: #e9ecef;
+  color: $gray-700 !important;
   font-variant: small-caps;
   text-transform: lowercase;
   font-weight: bold;
